Fix overflow of probe name

--- a/probe-dictionary/explorer.css
+++ b/probe-dictionary/explorer.css
@@ -155,3 +155,7 @@ th {
     top: -1px;
     background-color: #ECECEC;
 }
+
+#detail-probe-name {
+    overflow-wrap: break-word;
+}
